--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Updated favicon -->
-    <link rel="icon" type="image/png" href="/i.png" />
+    <link rel="icon" type="image/png" href="/portfolio/public/I.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Irsa Studio - Official</title>
   </head>
